Fixed alignment issue for screenshots at bottom of slides. It is now possible to have more than one row...

--- a/slides/link/general.css
+++ b/slides/link/general.css
@@ -127,9 +127,11 @@ go in this block.
 	position:absolute;
 	
 	width:100%;
-	height:138px;
 	
-	bottom:10px;
+	padding-top:4px;
+	padding-bottom:4px;
+	
+	bottom:0px;
 	left:0px;
 	
 	text-align:center;
